@@ -10,6 +10,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class UserService {
@@ -26,7 +27,7 @@ public class UserService {
     }
 
     public List<UserDTO> getUsers() {
-        return userRepository.findAll().stream().map(UserDTO::get).toList();
+        return userRepository.findAll().stream().map(UserDTO::get).collect(Collectors.toList());
     }
 
     public UserDTO updateUser(UpdateUserRequest request, String username) {
